--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+
 *,
 *::before,
 *::after {
@@ -60,4 +65,81 @@ h6 {
 #root,
 #__next {
   isolation: isolate;
+}
+
+/* Custom */
+
+* {
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+  height: 100%;
+}
+
+body {
+  font-size: 1.6rem;
+  height: 100%;
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: whitesmoke;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  padding: 6.4rem 0;
+  background: url("./hero.png") center / cover no-repeat;
+}
+
+.header {
+  text-align: center;
+}
+
+.header .navigation .button {
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  font-size: 1.8rem;
+  cursor: pointer;
+  padding: 0.4em 0.8em;
+  border-radius: 0.5rem;
+  color: whitesmoke;
+}
+
+.header .navigation .button:not(:last-child) {
+  margin-right: 4.2rem;
+}
+
+.content {
+  height: 100%;
+}
+
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.4rem;
+  height: 100%;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3), 0 0 6px rgba(0, 0, 0, 0.2),
+    0 0 12px rgba(0, 0, 0, 0.1);
+}
+
+.hero-section .heading {
+  font-size: 6rem;
+  line-height: 0.8;
+  text-align: center;
+}
+
+.hero-section .heading span:last-child {
+  font-style: italic;
+  font-size: 3.2rem;
+}
+
+.hero-section .text {
+  font-size: 2.4rem;
+  text-align: center;
+  width: clamp(45ch, 50%, 50ch);
 }
