--- a/src/styles.css
+++ b/src/styles.css
@@ -84,6 +84,11 @@ body {
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: whitesmoke;
+
+  && .link,
+  .button {
+    color: whitesmoke;
+  }
 }
 
 .wrapper {
@@ -105,7 +110,6 @@ body {
   cursor: pointer;
   padding: 0.4em 0.8em;
   border-radius: 0.5rem;
-  color: whitesmoke;
 }
 
 .header .navigation .button:not(:last-child) {
