--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,8 @@ h6 {
 
 /* Custom */
 
+/* Global */
+
 * {
   padding: 0;
 }
@@ -114,4 +116,106 @@ body {
 
 .header .navigation .button:not(:last-child) {
   margin-right: 4.2rem;
+}
+
+/* Home  */
+
+.home-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2.4rem;
+  height: 100%;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7), 0 0 10px rgba(0, 0, 0, 0.6),
+    0 0 20px rgba(0, 0, 0, 0.4);
+}
+
+.home-content .heading {
+  font-size: 6rem;
+  text-align: center;
+}
+
+.home-content .sub-heading {
+  font-style: italic;
+  font-size: 3.2rem;
+  margin-top: -3.2rem;
+}
+
+.home-content .text {
+  font-size: 2.4rem;
+  text-align: center;
+  width: clamp(45ch, 50%, 50ch);
+}
+
+/* Menu */
+
+.menu-content {
+  height: 100%;
+  overflow: hidden;
+  scrollbar-width: none;
+}
+
+.menu-content .heading {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7), 0 0 10px rgba(0, 0, 0, 0.6),
+    0 0 20px rgba(0, 0, 0, 0.4);
+  margin-top: 6.4rem;
+  margin-bottom: 3.2rem;
+  text-align: center;
+  text-decoration: underline;
+  font-style: italic;
+}
+
+.menu-content .menu-container {
+  width: 100%;
+  height: 75%;
+  padding: 0 25%;
+  overflow: auto;
+  scrollbar-width: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  justify-items: center;
+  gap: 1.6rem;
+}
+
+.menu-content .menu-container .dish-card {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 2.4rem 1.6rem;
+  border-radius: 0.8rem;
+}
+
+.menu-content .dish-card .dish-title {
+  margin-bottom: 0.8rem;
+}
+
+/* About */
+
+.about-content .heading {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7), 0 0 10px rgba(0, 0, 0, 0.6),
+    0 0 20px rgba(0, 0, 0, 0.4);
+  margin-top: 6.4rem;
+  margin-bottom: 3.2rem;
+  text-align: center;
+  text-decoration: underline;
+  font-style: italic;
+}
+
+.about-content .cards-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  width: clamp(45ch, 50%, 65ch);
+  margin: 0 auto;
+}
+
+.about-content .cards-container .card {
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 2.4rem 1.6rem;
+  border-radius: 0.8rem;
+}
+
+.about-content .card .title {
+  margin-bottom: 0.8rem;
 }
